# Home_Work13.3

./: README.md  main.py  pyproject.toml  requirements.txt
scr/: datastr.py
tests/: test_datastr.py
